# Haibot_Deep_RL_mobilerobot

./: README.md
src/deep_rl_gazebo/: CMakeLists.txt  package.xml
src/deep_rl_gazebo/Experimental_result/: LogInfo.txt
src/deep_rl_gazebo/launch/: deep_rl_algos.launch  experimental.launch  sim_deployment.launch
src/deep_rl_gazebo/nodes/: train_model.py
src/deep_rl_gazebo/nodes/common/: data_logger.py  plotting.py  replay_buffers.py
src/deep_rl_gazebo/nodes/models/: drl_agent.py  q_network.py
src/deep_rl_gazebo/nodes/runs/Feb21_09-54-36_styph751-u/: events.out.tfevents.1676948085.styph751-u.42878.0
src/deep_rl_gazebo/nodes/runs/Feb21_09-59-57_styph751-u/: events.out.tfevents.1676948400.styph751-u.51427.0
src/deep_rl_gazebo/nodes/runs/Feb21_10-01-36_styph751-u/: events.out.tfevents.1676948499.styph751-u.55204.0
src/deep_rl_gazebo/nodes/runs/Feb21_10-07-15_styph751-u/: events.out.tfevents.1676948839.styph751-u.64983.0
src/deep_rl_gazebo/nodes/runs/Feb21_10-13-46_styph751-u/: events.out.tfevents.1676949229.styph751-u.79328.0
src/deep_rl_gazebo/nodes/runs/Feb21_10-16-01_styph751-u/: events.out.tfevents.1676949364.styph751-u.83525.0
src/deep_rl_gazebo/nodes/test/: test_model_irl.py  test_model_sim.py
src/deep_rl_gazebo/save_model/PT_trial_1/: pt_trial_1_10.pt  pt_trial_1_100.pt  pt_trial_1_110.pt  pt_trial_1_120.pt  pt_trial_1_20.pt  pt_trial_1_30.pt  pt_trial_1_40.pt  pt_trial_1_50.pt  pt_trial_1_60.pt  pt_trial_1_70.pt  pt_trial_1_80.pt  pt_trial_1_90.pt
src/deep_rl_gazebo/src/: environment.py  environment_real.py  respawnGoal.py
(+12 files in other folders)
